# loom

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: claude-settings.json.example  codex-hooks.json.example
docs/: quickstart.md
docs/design/: 000-system-overview.md  001-harness-design.md  002-workbench-design.md  003-harness-redesign.md  004-layered-redesign-purpose.md  005-layered-redesign-harness.md  006-implementation-acceptance-spec.md  007-graph-explorer-redesign.md  008-design-spec-implementation-alignment-decisions.md
scripts/: audit_luhmann_tree.py  batch_digest.py  final_checklist.py  metrics_report.py  migrate_luhmann_tree.py
scripts/migrations/: l2-grimes-plan.json  l2-maslow-plan.json  l3-fin-plan.json  l3-fit-plan.json  l3-llm-plan.json  l3-phil-plan.json  l3-psy-plan.json  l4-plan.json
skills/: _loom_core.md
skills/loom-digest/: SKILL.md
skills/loom-pipeline/: SKILL.md
skills/loom-think/: SKILL.md
skills/loom-use/: SKILL.md
skills/resource-to-markdown/: README.md  SKILL.md
src/loom/: __init__.py  __main__.py  checks.py  cli.py  embed.py  store.py
tests/: conftest.py  test_embedding_config.py  test_harness_flow.py  test_luhmann_tree.py  test_proposals_and_observability.py  test_skill_pipeline_contracts.py  test_stop_check_and_state_machine.py  test_write_draft_checks.py
(+49 files in other folders)
