[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-harness"
version = "0.1.0"
description = "A local-first cognitive harness for agent-readable layered card networks."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Loom contributors" }
]
keywords = ["agent", "knowledge", "zettelkasten", "sqlite", "harness"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Database",
  "Topic :: Text Processing",
]
dependencies = [
  "certifi>=2023.0.0",
  "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
workbench = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]
dev = [
  "pytest>=8",
]

[project.scripts]
loom = "loom.__main__:main"
loom-admin = "loom.__main__:admin_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
